@@ -9,6 +9,7 @@ simple_glide_LDADD = libglimmer-simple.la $(top_builddir)/libglide/libglide.la $
                     $(NETCDF_LDFLAGS) $(HDF5_LDFLAGS) $(NETCDF_LIBS) $(BLAS_LIBS)
 
 AM_FCFLAGS = $(NETCDF_FCFLAGS) $(F90_MODFLAG)$(top_builddir)/libglimmer-solve $(F90_MODFLAG)$(top_builddir)/libglide $(F90_MODFLAG)$(top_builddir)/libglimmer
+AM_LDFLAGS=-all-static
 
 f90_dep.mak:	$(simple_glide_SOURCES)
 		$(PYTHON) $(top_srcdir)/scripts/f90_dependencies.py -o $@ $^
